@@ -76,6 +76,9 @@
    - stevesk@cvs.openbsd.org 2008/10/17 18:36:24
      [ssh_config.5]
      correct and clarify VisualHostKey; ok jmc@
+   - stevesk@cvs.openbsd.org 2008/10/30 19:31:16
+     [clientloop.c sshd.c]
+     don't need to #include "monitor_fdpass.h"
 
 20080906
  - (dtucker) [config.guess config.sub] Update to latest versions from
@@ -4810,4 +4813,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5116 2008/11/03 08:25:21 djm Exp $
+$Id: ChangeLog,v 1.5117 2008/11/03 08:25:40 djm Exp $
